--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.services.authentication": "3.3.3",
     "com.unity.services.core": "1.13.0",
     "com.unity.services.lobby": "1.2.2",
+    "com.unity.services.matchmaker": "1.1.5",
     "com.unity.services.multiplay": "1.2.5",
     "com.unity.services.relay": "1.1.1",
     "com.unity.test-framework": "1.3.9",
